# docklet

./: LICENSE  Makefile  Makefile.am  README.md  configure.ac  docklet-installer.sh
conf/: docklet.conf
dashboard/: desktop.html  doc.html  ovswork.txt
dashboard/js/: socketHandler.js
dashboard/js/app-win/: AuthorizeWindow.js  ClusterWindow.js  CreateWindow.js  HelpWindow.js  PortalWindow.js
dashboard/js/desktop/: App.js
dashboard/js/ext-core/: ext-base.js
dashboard/js/session/: DesktopSession.js  LoginSession.js
http/: dl-httpinit  dl-httprest.py  ftplib2-server.py
http/wssh/: dl-wssh  dl-wssh.js  dl-wsshd  dlsh  portd  shellinabox2.14-1.patch
images/: gxx-mpi.conf  jdk-akka-spark.conf  mysqldb.conf  nisweb-server.conf  pub_root_base.conf  python2-apache2.conf  python2-nginx.conf  vncdesktop.conf
images/core-service/: nishttp-server.conf
kernel/http/: dl-httprest.py
lib/: dl-httpinit  dl-httprest.py  docklet-http
lib/dashboard/: desktop.html  doc.html  openvswitch-docker.txt
lib/dashboard/css/: desktop.css
lib/dashboard/js/: socketHandler.js
lib/dashboard/js/app-win/: AuthorizeWindow.js  ClusterWindow.js  CommonWindow.js  CreateWindow.js
lib/dashboard/js/desktop/: Desktop.js  StartMenu.js
lib/dashboard/js/session/: LoginSession.js
